--- a/style.css
+++ b/style.css
@@ -6,12 +6,15 @@ body{
 	font-family: sans-serif;
 }
 .banner{
-	height: 100%;
+	height: 100vh;
 	position: relative;
 }
 .slider{
 	width: 93%;
 	float:left;
+}
+.carousel-caption-item{
+	height:50px !important;
 }
 .carousel-caption{
 	max-height: 350px !important;
@@ -28,12 +31,15 @@ body{
 	margin-top: 40px;
 }
 .side-menu{
-	height:768px;
+	height:630px;
 	width: 7%;
 	float:right;
 	background-color: #ff0000;
 	position:relative;
 	z-index: 2;
+}
+.carousel-item{
+	height: 630px;
 }
 .menu-icon{
 	width: 40px;
@@ -73,7 +79,7 @@ body{
 }
 .share{
 	margin-top: 60px;
-	margin-left: 15px;
+	margin-left: 40px;
 }
 .share img{
 	width:20px;
